fix visibility issues

--- a/reader.css
+++ b/reader.css
@@ -32,7 +32,7 @@ width:100%;
     box-shadow: 10px 10px 10px 1px;
 }
 .cover p{
-    padding:0;
+    padding:1vmax;
     margin:0;
 }
 .title{
@@ -46,6 +46,7 @@ width:100%;
 .story-content{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size:3vmax;
+    padding:5vmax;
 }
 .column{
     display:flex;
